# PUNTO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-and-install.sh  punto-switcher_1.0.0-1_amd64.deb
.apt/etc/apt/: warpdotdev.gpg  yandex-browser.gpg
.github/workflows/: build-packages.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt
_build/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
_build/Testing/Temporary/: CTestCostData.txt
_build/src/core/: Makefile  cmake_install.cmake
_build/src/engine/: Makefile  cmake_install.cmake
_build/src/gui/: Makefile  cmake_install.cmake  punto-switcher-config
_build/src/gui/punto-switcher-config_autogen/: deps  moc_predefs.h
_build/src/gui/punto-switcher-config_autogen/EWIEGA46WW/: moc_HotkeyEditor.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d
_build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  punto-tests  punto-tests[1]_include.cmake  punto-tests[1]_tests.cmake
_dist/deb/DEBIAN/: control
_dist/punto-switcher-1.0.0/share/fcitx5/addon/: punto-switcher.conf
docker/: Dockerfile.deb  Dockerfile.rpm
packaging/deb/: changelog  control  copyright  postinst  preinst  prerm  punto-switcher.install  rules
packaging/deb/debian/punto-switcher/DEBIAN/: control  postinst
packaging/rpm/: punto-switcher.spec
scripts/: build-deb.sh  punto-switcher-setup  restore-kde-keyboard-only.sh
src/core/: AutoSwitchHeuristic.cpp  AutoSwitchHeuristic.h  CMakeLists.txt  CharMapping.cpp  CharMapping.h  Utf8Utils.h  WordSwapper.cpp  WordSwapper.h
src/daemon/: 70-punto-switcher-uinput.rules  CMakeLists.txt  DaemonConfig.cpp  DaemonConfig.h  EvdevUinput.cpp  EvdevUinput.h  LayoutController.cpp  LayoutController.h  PuntoDaemon.cpp  PuntoDaemon.h  SessionEnv.cpp  SessionEnv.h  TextInjector.cpp  TextInjector.h  main.cpp  punto-switcher-daemon.service  punto-switcher-stop  punto-switcher.desktop
src/engine/: CMakeLists.txt  InputTracker.cpp  InputTracker.h  PuntoModule.cpp  PuntoModule.h
src/engine/conf/: punto-switcher.conf
src/gui/: CMakeLists.txt  HotkeyEditor.cpp  HotkeyEditor.h  MainWindow.cpp  MainWindow.h  main.cpp  punto-switcher-config.desktop.in
tests/: CMakeLists.txt  test_heuristic.cpp  test_mapping.cpp  test_swapper.cpp
